# libunifex

./: .clang-format  .gitignore  .gitmodules  .install-libcxx.sh  .lldbinit  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  \
.github/workflows/: libunifex-ci.yml
cmake/: CMakeLists.txt.in  DefaultBuildType.cmake  DownloadBuildInstall.cmake.in  FindCoroutines.cmake  FindLibUring.cmake  FindMemoryResource.cmake  HunterGate.cmake  HunterVersion.cmake  ProjectConfig.cmake.in  coro_test_code.cpp  gtest.cmake  pmr_experimental_test_code.cpp  pmr_test_code.cpp  project-is-top-level.cmake  unifex_env.cmake  unifex_flags.cmake  unifex_options.cmake
cmake/Hunter/: config.cmake
doc/: api_reference.md  cancellation.md  concepts.md  customisation_points.md  debugging.md  overview.md  type_erasure.md
doc/std/: D2006R1.md  D2175.md  Makefile  metadata.yaml
examples/: CMakeLists.txt  any_unique.cpp  any_unique_test.cpp  async_auto_reset_event_count.cpp  async_manual_reset_event_bench.cpp  async_mutex.cpp  async_pass.cpp  async_shared_mutex.cpp  async_trace.cpp  async_trace_test.cpp  asynchronous_sleep.cpp  canary_stress.cpp  co_file_copy.cpp  coroutine_stream_consumer.cpp  coroutine_stream_consumer_test.cpp  create_basic_sender.cpp  delayed_stream_cancellation.cpp  delayed_stream_cancellation_test.cpp  execute.cpp  execute_test.cpp  fifo_executor.cpp  file_copy.cpp  find_if.cpp  for_each_synchronous.cpp  for_each_synchronous_test.cpp  for_each_via_thread_scheduler.cpp  for_each_via_thread_scheduler_test.cpp  for_each_via_trampoline.cpp  for_each_via_trampoline_test.cpp  fp_delegation.cpp  get_scheduler.cpp  get_scheduler_test.cpp  heap_allocate.cpp  heap_allocate_operation.cpp  io_uring_test.cpp  let.cpp  let_test.cpp  materialize.cpp  never_stream_cancellation.cpp  never_stream_cancellation_test.cpp  (+28 more)
examples/linux/: file_coroutines_test.cpp  http_server_io_uring_test.cpp  io_epoll_test.cpp  io_uring_test.cpp
include/unifex/: adapt_stream.hpp  allocate.hpp  any_object.hpp  any_ref.hpp  any_scheduler.hpp  any_sender_of.hpp  any_unique.hpp  as_exception_ptr.hpp  async_auto_reset_event.hpp  async_destroy.hpp  async_generator.hpp  async_invoke.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_pass.hpp  async_resource.hpp  async_resource_ptr.hpp  async_scope.hpp  async_shared_mutex.hpp  async_trace.hpp  at_coroutine_exit.hpp  await_transform.hpp  awaitable_sender.hpp  bind_back.hpp  blocking.hpp  bulk.hpp  bulk_join.hpp  bulk_schedule.hpp  bulk_transform.hpp  bulk_via.hpp  bulk_with_stop_source.hpp  canary.hpp  cancellable.hpp  cleanup_adapt_stream.hpp  complete_adapt_stream.hpp  completion_channels.hpp  compose_with_target.hpp  config.hpp  config.hpp.in  connect_awaitable.hpp  (+149 more)
include/unifex/detail/: any_heap_allocated_storage.hpp  atomic_intrusive_list.hpp  atomic_intrusive_queue.hpp  completion_forwarder.hpp  concept_macros.hpp  debug_async_scope.hpp  epilogue.hpp  fwddecls.hpp  intrusive_heap.hpp  intrusive_list.hpp  intrusive_queue.hpp  intrusive_stack.hpp  lambda_op.hpp  make_traits.hpp  prologue.hpp  type_erasure_builtins.hpp  unifex_fwd.hpp  vtable.hpp  with_abort_tag_invoke.hpp  with_forwarding_tag_invoke.hpp  with_type_erased_tag_invoke.hpp
include/unifex/linux/: io_epoll_context.hpp  io_uring_context.hpp  mmap_region.hpp  monotonic_clock.hpp  safe_file_descriptor.hpp
include/unifex/tracing/: async_stack-inl.hpp  async_stack.hpp  get_async_stack_frame.hpp  get_return_address.hpp  get_return_address_mock.hpp  inject_async_stack.hpp
include/unifex/v0/: async_scope.hpp
include/unifex/v1/: async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  debug_async_scope.hpp
include/unifex/v2/: async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  debug_async_scope.hpp
include/unifex/win32/: filetime_clock.hpp  (+2 more)
source/: CMakeLists.txt  async_auto_reset_event.cpp  async_manual_reset_event.cpp  async_manual_reset_event_v1.cpp  async_manual_reset_event_v2.cpp  async_mutex.cpp  async_mutex_v1.cpp  async_mutex_v2.cpp  async_pass.cpp  async_shared_mutex.cpp  async_stack.cpp  atomic_intrusive_list.cpp  exception.cpp  fifo_manual_event_loop.cpp  inplace_stop_token.cpp  manual_event_loop.cpp  single_async_manual_reset_event.cpp  static_thread_pool.cpp  task.cpp  thread_unsafe_event_loop.cpp  timed_single_thread_context.cpp  trampoline_scheduler.cpp  unifex.pc.in  unnamed_primitive.cpp  unstoppable_baton.cpp
source/linux/: io_epoll_context.cpp  io_uring_context.cpp  io_uring_syscall.cpp  io_uring_syscall.hpp  mmap_region.cpp  monotonic_clock.cpp  safe_file_descriptor.cpp
source/win32/: filetime_clock.cpp  low_latency_iocp_context.cpp  ntapi.cpp  safe_handle.cpp  windows_thread_pool.cpp
test/: AsyncStackTest.cpp  CMakeLists.txt  P0443_test.cpp  allocate_test.cpp  any_object_test.cpp  any_scheduler_test.cpp  any_sender_of_test.cpp  any_unique_test.cpp  as_exception_ptr_test.cpp  async_auto_reset_event_test.cpp  async_destroy_test.cpp  async_generator_test.cpp  async_invoke_test.cpp  async_manual_reset_event_test.cpp  async_manual_reset_event_v2_test.cpp  async_mutex_test.cpp  async_mutex_v1_test.cpp  async_mutex_v2_test.cpp  async_pass_test.cpp  async_resource_cancel_task_async_destroy_test.cpp  async_resource_closed_scope_test.cpp  async_resource_drop_child_before_parent_test.cpp  async_resource_great_grandparent_test.cpp  async_resource_in_place_test.cpp  async_resource_managed_any_sender_async_destroy_test.cpp  async_resource_managed_async_destroy_test.cpp  async_resource_managed_task_async_destroy_test.cpp  async_resource_no_async_destroy_test.cpp  async_resource_parent_drops_child_test.cpp  async_resource_plain_sender_test.cpp  async_resource_ptr_test.cpp  async_resource_reset_on_destroy_test.cpp  async_resource_reset_on_destruct_test.cpp  async_resource_spawning_resource_test.cpp  async_resource_tag_invoke_async_destroy_test.cpp  async_resource_tag_invoke_over_async_destroy_test.cpp  async_resource_test.hpp  async_resource_throwing_plain_sender_test.cpp  async_resource_throwing_test.cpp  async_resource_two_children_later_test.cpp  (+93 more)
(+6 files in other folders)
